Addition of core structure

--- a/index.html
+++ b/index.html
@@ -4,9 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="love running club for runners in Dublin">
+    <meta name="keywords" content="running, Dublin, clubs, excercise">
+    <link rel="stylesheet" href="assets/css/style.css">
+
+
+    <title>Love Running</title>
 </head>
 <body>
-    
+    <header>Our header content</header>
+
+    <section>
+        Main Image
+    </section>
+    <section>
+        Club Ethos
+    </section>
+    <section>
+        Meetings
+    </section>
+
+    <footer>Our Socials</footer>
+  
 </body>
 </html>
