--- a/index.html
+++ b/index.html
@@ -3,50 +3,45 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="love running club for runners in Dublin">
-    <meta name="keywords" content="running, Dublin, clubs, excercise">
+    <meta name="description" content="Love Running club for runners in Dublin, Ireland">
+    <meta name="keywords" content="love running, running club, ireland, dublin">
+
     <link rel="stylesheet" href="assets/css/style.css">
-
-
     <title>Love Running</title>
 </head>
 
 <body>
     <header>
         <a href="index.html">
-            <h1>Love Running</h1>
+            <h1 id="logo">Love Running</h1>
         </a>
-
-        <nav>
+        <nav id="menu">
             <ul>
                 <li>
-                    <a href="index.html">Home</a>
+                    <a href="#">Sign Up</a>
                 </li>
                 <li>
                     <a href="#">Gallery</a>
                 </li>
                 <li>
-                    <a href="#">Sign Up</a>
+                    <a href="index.html">Home</a>
                 </li>
             </ul>
         </nav>
-
     </header>
-
     <section>
-        Main Image
+        Main image
     </section>
     <section>
         Club Ethos
     </section>
     <section>
-        Meetings
+        Running locations, distances and times
     </section>
-
-    <footer>Our Socials</footer>
-
+    <footer>
+        social links here
+    </footer>
 </body>
 
 </html>
